--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>Sample Serenity project using Cucumber and WebDriver</name>
+    <name>JSONPlaceholder Serenity test project using Cucumber</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.8.3</serenity.version>
-        <serenity.cucumber.version>1.6.6</serenity.cucumber.version>
-        <webdriver.driver>firefox</webdriver.driver>
+        <serenity.version>2.0.52</serenity.version>
+        <serenity.cucumber.version>1.9.39</serenity.cucumber.version>
     </properties>
 
     <repositories>
@@ -62,6 +61,22 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.12.2</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.0.0</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -82,7 +97,6 @@
                     </includes>
                     <argLine>-Xmx512m</argLine>
                     <systemPropertyVariables>
-                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
