--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,12 @@
                     <reuseForks>true</reuseForks>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
-                <version>2.20.1</version><!--$NO-MVN-MAN-VER$-->
+                <!--<version>2.20.1</version>&lt;!&ndash;$NO-MVN-MAN-VER$&ndash;&gt;-->
+                <version>3.0.0-M3</version>
             </plugin>
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.19.1</version>
+                <version>3.0.0-M3</version>
                 <configuration>
                     <includes>
                         <include>**/*.java</include>
@@ -105,6 +106,7 @@
                     <systemPropertyVariables>
                         <base.uri>${base.uri}</base.uri>
                     </systemPropertyVariables>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
                 <executions>
                     <execution>
