CircleCI: Updating store_test_results path and adding store_artifacts for the report

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,11 @@ jobs: # a collection of steps
       
       - store_test_results: # uploads the test metadata from the `target/surefire-reports` directory so that it can show up in the CircleCI dashboard. 
       # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: target/site
-      
-      # v: disabled
+          path: target/site/serenity
+      - store_artifacts:
+          path: target/site/serenity
+
+          # v: disabled
       # - store_artifacts: # store the uberjar as an artifact
       # # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           # path: target/demo-java-spring-0.0.1-SNAPSHOT.jar
