--- a/serenity.properties
+++ b/serenity.properties
@@ -2,7 +2,7 @@
 #webdriver.driver=phantomjs
 
 # Appears at the top of the reports
-serenity.project.name = Demo Project using Serenity and Cucumber
+serenity.project.name = JSONPlaceholder Serenity test project using Cucumber
 
 # Root package for any JUnit acceptance tests
 #serenity.test.root=net.thucydides.showcase.junit.features
